@startuml AudioStateMachine

    '############################ States ############################

    [*] --> IDLE

    state IDLE
    state READY
    state LOADING
    state PLAYING
    state PAUSED

    '############################ Handlers ############################

    IDLE: enter / this.actions.pauseAllAudio(); this.actions.resetAllAudio(); this.actions.uiIdle(); this.actions.hideLoadingAnimation(); this.actions.initInputAdjustments();
    IDLE --> LOADING : SQUARE_CLICKED / this.actions.startNewStoryProcess(); this.actions.addSquareToPlayed(); this.actions.fixSquareColor();
    IDLE --> LOADING : FORM_SUBMITTED / this.actions.startNewStoryProcessForm(); this.actions.addSquareToPlayed(); this.actions.toggleView();
    IDLE : VIEW_TOGGLED / this.actions.toggleView();
    IDLE : INPUT_CHANGED / this.actions.uiReadyButtons();

    LOADING: enter / this.actions.toggleView(); this.actions.showLoadingAnimation(); this.actions.loadingDots(); this.actions.uiLoadingButtons();
    LOADING --> PLAYING : SPEECH_READY / this.actions.setUpAndStartAllAudio(); this.actions.displayStoryText(); this.actions.wrapWordsInSpans();
    LOADING --> PAUSED : TOGGLE_PAUSE_RESUME / this.actions.pauseAllAudio();
    LOADING --> IDLE : CANCEL / this.actions.abortProcess();
    LOADING : VIEW_TOGGLED / this.actions.toggleView();
    LOADING : INPUT_CHANGED / this.actions.uiReadyButtons();

    PLAYING: enter / this.actions.uiPlayingButtons(); this.actions.removeBlurr(); this.actions.greenDots();
    PLAYING --> PAUSED : TOGGLE_PAUSE_RESUME / this.actions.pauseAllAudio();
    PLAYING --> IDLE : MUSIC_OVER [this.actions.bothTracksEnded()]
    PLAYING --> IDLE: CANCEL / this.actions.stopAndResetAllAudio();
    PLAYING --> LOADING : SQUARE_CLICKED / this.actions.startNewStoryProcess(); this.actions.addSquareToPlayed(); this.actions.fixSquareColor();
    PLAYING --> LOADING : FORM_SUBMITTED / this.actions.startNewStoryProcessForm(); this.actions.addSquareToPlayed();
    PLAYING : FROM_START_CLICKED / this.actions.pauseAllAudio(); this.actions.resetAllAudio(); this.actions.setUpAndStartAllAudio();
    PLAYING : VIEW_TOGGLED / this.actions.toggleView();
    PLAYING : INPUT_CHANGED / this.actions.uiReadyButtons();

    PAUSED: enter / this.actions.uiPausedButtons(); this.actions.addBlurr();
    PAUSED --> LOADING : SQUARE_CLICKED / this.actions.startNewStoryProcess(); this.actions.addSquareToPlayed(); this.actions.fixSquareColor();
    PAUSED --> LOADING : FORM_SUBMITTED / this.actions.startNewStoryProcessForm(); this.actions.addSquareToPlayed();
    PAUSED --> PLAYING : TOGGLE_PAUSE_RESUME / this.actions.resumeAllAudio();
    PAUSED --> PLAYING : FROM_START_CLICKED / this.actions.resetAllAudio(); this.actions.setUpAndStartAllAudio();
    PAUSED --> IDLE: CANCEL / this.actions.setUpAndStartAllAudio();
    PAUSED : VIEW_TOGGLED / this.actions.toggleView();
    PAUSED : INPUT_CHANGED / this.actions.uiReadyButtons();

/'! $CONFIG : toml
SmRunnerSettings.transpilerId = "JavaScript"
'/

@enduml
